MyToolKit/FlexBisonTest/y.output
Grammar

    0 $accept: statement_list $end

    1 statement_list: statement '\n'
    2               | statement_list statement '\n'

    3 statement: NAME '=' expression
    4          | expression

    5 expression: expression '+' expression
    6           | expression '-' expression
    7           | expression '*' expression
    8           | expression '/' expression
    9           | '-' expression
   10           | '(' expression ')'
   11           | NUMBER
   12           | NAME


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2
'(' (40) 10
')' (41) 10
'*' (42) 7
'+' (43) 5
'-' (45) 6 9
'/' (47) 8
'=' (61) 3
error (256)
NAME (258) 3 12
NUMBER (259) 11
UMINUS (260)


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
statement_list (15)
    on left: 1 2, on right: 0 2
statement (16)
    on left: 3 4, on right: 1 2
expression (17)
    on left: 5 6 7 8 9 10 11 12, on right: 3 4 5 6 7 8 9 10


State 0

    0 $accept: . statement_list $end

    NAME    shift, and go to state 1
    NUMBER  shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    statement_list  go to state 5
    statement       go to state 6
    expression      go to state 7


State 1

    3 statement: NAME . '=' expression
   12 expression: NAME .

    '='  shift, and go to state 8

    $default  reduce using rule 12 (expression)


State 2

   11 expression: NUMBER .

    $default  reduce using rule 11 (expression)


State 3

    9 expression: '-' . expression

    NAME    shift, and go to state 9
    NUMBER  shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 10


State 4

   10 expression: '(' . expression ')'

    NAME    shift, and go to state 9
    NUMBER  shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 11


State 5

    0 $accept: statement_list . $end
    2 statement_list: statement_list . statement '\n'

    $end    shift, and go to state 12
    NAME    shift, and go to state 1
    NUMBER  shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    statement   go to state 13
    expression  go to state 7


State 6

    1 statement_list: statement . '\n'

    '\n'  shift, and go to state 14


State 7

    4 statement: expression .
    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression

    '-'  shift, and go to state 15
    '+'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 4 (statement)


State 8

    3 statement: NAME '=' . expression

    NAME    shift, and go to state 9
    NUMBER  shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 19


State 9

   12 expression: NAME .

    $default  reduce using rule 12 (expression)


State 10

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    9           | '-' expression .

    $default  reduce using rule 9 (expression)


State 11

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
   10           | '(' expression . ')'

    '-'  shift, and go to state 15
    '+'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18
    ')'  shift, and go to state 20


State 12

    0 $accept: statement_list $end .

    $default  accept


State 13

    2 statement_list: statement_list statement . '\n'

    '\n'  shift, and go to state 21


State 14

    1 statement_list: statement '\n' .

    $default  reduce using rule 1 (statement_list)


State 15

    6 expression: expression '-' . expression

    NAME    shift, and go to state 9
    NUMBER  shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 22


State 16

    5 expression: expression '+' . expression

    NAME    shift, and go to state 9
    NUMBER  shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 23


State 17

    7 expression: expression '*' . expression

    NAME    shift, and go to state 9
    NUMBER  shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 24


State 18

    8 expression: expression '/' . expression

    NAME    shift, and go to state 9
    NUMBER  shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 25


State 19

    3 statement: NAME '=' expression .
    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression

    '-'  shift, and go to state 15
    '+'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 3 (statement)


State 20

   10 expression: '(' expression ')' .

    $default  reduce using rule 10 (expression)


State 21

    2 statement_list: statement_list statement '\n' .

    $default  reduce using rule 2 (statement_list)


State 22

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    6           | expression '-' expression .
    7           | expression . '*' expression
    8           | expression . '/' expression

    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 6 (expression)


State 23

    5 expression: expression . '+' expression
    5           | expression '+' expression .
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression

    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 5 (expression)


State 24

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    7           | expression '*' expression .
    8           | expression . '/' expression

    $default  reduce using rule 7 (expression)


State 25

    5 expression: expression . '+' expression
    6           | expression . '-' expression
    7           | expression . '*' expression
    8           | expression . '/' expression
    8           | expression '/' expression .

    $default  reduce using rule 8 (expression)
